[gd_scene load_steps=9 format=2]

[ext_resource path="res://media/ttf/fcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://media/tres/dyFonts/terminal.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/scenes/screens/opts_screen.gd" type="Script" id=3]
[ext_resource path="res://media/tres/stylebox/empty.tres" type="StyleBox" id=4]
[ext_resource path="res://media/tres/theme/default.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 84
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1444]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1445]
size = 34
font_data = ExtResource( 1 )

[node name="opts_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color" type="ColorRect" parent="bg"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.027451, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="bg"]
anchor_left = 0.033
anchor_top = 0.059
anchor_right = 0.521
anchor_bottom = 0.156
margin_left = 0.639999
margin_top = 0.279999
margin_right = -520.32
margin_bottom = -0.480011
custom_fonts/font = SubResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lang" type="Control" parent="menu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="menu/lang"]
anchor_left = 0.037
anchor_top = 0.237
anchor_right = 0.167
anchor_bottom = 0.285
margin_left = 0.959999
margin_top = 0.039978
margin_right = -4.64001
margin_bottom = 0.199982
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lang_opts" type="OptionButton" parent="menu/lang"]
anchor_left = 0.037
anchor_top = 0.304
anchor_right = 0.2
anchor_bottom = 0.351
margin_left = 0.959999
margin_top = -0.320007
margin_right = -40.0
margin_bottom = -0.0800171
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_fonts/font = SubResource( 1444 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scr" type="Control" parent="menu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="menu/scr"]
anchor_left = 0.037
anchor_top = 0.422
anchor_right = 0.233
anchor_bottom = 0.481
margin_left = 0.959999
margin_top = 0.23999
margin_right = -89.36
margin_bottom = 0.519958
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="size" type="OptionButton" parent="menu/scr"]
anchor_left = 0.037
anchor_top = 0.489
anchor_right = 0.151
anchor_bottom = 0.536
margin_left = 0.959999
margin_top = -0.119995
margin_right = -0.920013
margin_bottom = 0.119995
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_fonts/font = SubResource( 1444 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mode" type="OptionButton" parent="menu/scr"]
anchor_left = 0.037
anchor_top = 0.548
anchor_right = 0.267
anchor_bottom = 0.595
margin_left = 0.959999
margin_top = 0.159973
margin_right = -223.64
margin_bottom = 0.399963
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_fonts/font = SubResource( 1444 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound" type="Control" parent="menu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="menu/sound"]
anchor_left = 0.037
anchor_top = 0.652
anchor_right = 0.133
anchor_bottom = 0.711
margin_left = 0.959999
margin_top = -0.160034
margin_right = -27.36
margin_bottom = 0.119995
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgm" type="Label" parent="menu/sound"]
anchor_left = 0.037
anchor_top = 0.719
anchor_right = 0.167
anchor_bottom = 0.758
margin_left = 0.959999
margin_top = -0.52002
margin_right = -17.64
margin_bottom = 0.359985
custom_fonts/font = SubResource( 1445 )
custom_colors/font_color = Color( 0.752941, 0.752941, 0.752941, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgm_slider" type="HSlider" parent="menu/sound"]
anchor_left = 0.037
anchor_top = 0.763
anchor_right = 0.367
anchor_bottom = 0.778
margin_left = 0.959999
margin_top = -0.0400391
margin_right = -0.640015
margin_bottom = -0.240051
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
min_value = -24.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx" type="Label" parent="menu/sound"]
anchor_left = 0.037
anchor_top = 0.807
anchor_right = 0.167
anchor_bottom = 0.847
margin_left = 0.959999
margin_top = 0.439941
margin_right = -17.64
margin_bottom = 0.239929
custom_fonts/font = SubResource( 1445 )
custom_colors/font_color = Color( 0.752941, 0.752941, 0.752941, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_slider" type="HSlider" parent="menu/sound"]
anchor_left = 0.037
anchor_top = 0.852
anchor_right = 0.367
anchor_bottom = 0.867
margin_left = 0.959999
margin_top = -0.160034
margin_right = -0.640015
margin_bottom = -0.360046
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
min_value = -24.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="menu"]
anchor_left = 0.933
anchor_top = 0.889
anchor_right = 0.967
anchor_bottom = 0.948
margin_left = 0.639893
margin_top = -0.120056
margin_right = -0.640137
margin_bottom = 0.159912
mouse_default_cursor_shape = 2
custom_styles/focus = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
text = "‚Üê"
flat = true
[connection signal="item_selected" from="menu/lang/lang_opts" to="." method="_on_lang_opts_item_selected"]
[connection signal="item_selected" from="menu/scr/size" to="." method="_on_size_item_selected"]
[connection signal="item_selected" from="menu/scr/mode" to="." method="_on_mode_item_selected"]
[connection signal="value_changed" from="menu/sound/bgm_slider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="value_changed" from="menu/sound/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="menu/exit" to="." method="_on_exit_pressed"]
